--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,7 +29,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  width:100%;
   min-height: 100vh;
   width:100%;
   background: #ffffff; 
