--- a/client/src/views/Home/Home.css
+++ b/client/src/views/Home/Home.css
@@ -1,7 +1,5 @@
 /* General Styles */
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
@@ -13,6 +11,7 @@
   
   /* Hero Section */
   .hero-section {
+    margin-top: 2000px;
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -42,17 +41,30 @@
     margin-bottom: 30px;
     line-height: 1.5;
   }
-  
+  /*Product section */
+  .product-card{
+    height:400px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    padding: 30px;
+    text-align: center;
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+    max-width: 300px;
+    transition: transform 0.3s;
+  }
   /* Features Section */
   .features-section {
     display: flex;
+    margin-top:0;
     justify-content: space-around;
     align-items: center;
-    padding: 80px 50px;
+    padding: 20px 50px;
     background-color: #f9f9f9;
+    margin-bottom: 50px;
   }
   
   .feature-card {
+    height:480px;
     background-color: #ffffff;
     border-radius: 10px;
     padding: 30px;
@@ -67,6 +79,7 @@
   }
   
   .feature-card img {
+    height:220px;
     width: 100%;
     border-radius: 10px;
     margin-bottom: 20px;
@@ -86,6 +99,8 @@
   
   /* Newsletter Section */
   .newsletter-section {
+    width:60%;
+    margin:auto;
     background-color: #333333;
     color: #ffffff;
     text-align: center;
@@ -133,7 +148,7 @@
   
   /* Buttons */
   .primary-button {
-    padding: 15px 30px;
+    padding: 11px 25px;
     background-color: #ff7f50;
     color: #ffffff;
     text-decoration: none;
@@ -144,6 +159,8 @@
   
   .primary-button:hover {
     background-color: #ff6347;
+    color:black;
+    padding: 13px 30px;
   }
   
   .secondary-button {
