--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -4,11 +4,13 @@
     padding: 40px 0;
     font-family: 'Arial', sans-serif;
     margin-top:20px;
+    font-size: large;
+    text-decoration: none;
   }
   
   .footer-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: flex-start;
     max-width: 1200px;
     margin: 0 auto;
@@ -17,9 +19,12 @@
   
   .footer-section {
     flex: 1;
-    margin: 0 20px;
+    margin: 0px 0px;
   }
-  
+  .social-icons{
+     width:35px;
+  }
+
   .footer-section h4 {
     font-size: 18px;
     margin-bottom: 20px;
