--- a/client/src/views/Home/Home.css
+++ b/client/src/views/Home/Home.css
@@ -7,11 +7,11 @@
   .home-container {
     width: 100%;
     overflow-x: hidden;
+    margin-top: 1900px;
   }
   
   /* Hero Section */
   .hero-section {
-    margin-top: 2000px;
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -51,6 +51,10 @@
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
     max-width: 300px;
     transition: transform 0.3s;
+    font-weight: 500;
+  }
+  .card-img{
+    margin-bottom: 10px;
   }
   /* Features Section */
   .features-section {
@@ -82,7 +86,7 @@
     height:220px;
     width: 100%;
     border-radius: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
   
   .feature-card h3 {
