--- a/client/src/views/Products/Products.css
+++ b/client/src/views/Products/Products.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    margin-top:3130px;
+    margin-top:2770px;
     width:200vh;
 }
 
@@ -20,7 +20,6 @@
     background: rgba(0, 0, 0, 0.5); /* Dark overlay for text readability */
     color: #fff;
     text-align: center;
-    padding: 1rem;
     border-radius: 8px;
 }
 
@@ -135,6 +134,7 @@
 
 .add-to-cart-button:hover {
     background-color: #d35400;
+    color:black
 }
 
 @media (max-width: 768px) {
